<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mouse</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="server_ip">电脑IP:</string>
    <string name="_192">192</string>
    <string name="_">.</string>
    <string name="_168">168</string>
    <string name="_port">端口号:</string>
    <string name="et_port">23333</string>
    <string name="_link">start</string>
    <string name="_illustration">使用说明:\n
        	1.先打开电脑上的server端，确保手机和电脑处于同一个网络\n
        	2.输入端口号，范围0~65535，然后点击"开启"\n
        	3.接着打开手机上的Mouse，填入ip和端口号,确保电脑和手机上的一致后点击start\n
        	4.菜单键支持鼠标和键盘的切换,双指上下滑动为滚轮</string>
    <string name="_left">LEFT</string>
    <string name="_right">RIGHT</string>
    <string name="_send">发送</string>
    <string name="_enter">回车</string>
    <string name="_backspace">删除</string>
    <string name="_space">空格</string>
    <string name="_back">后退</string>
    <string name="_forward">前进</string>
    <string name="_f5">F5</string>
    <string name="_esc">ESC</string>
    <string name="_closeTab">关闭标签</string>

</resources>
