<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/control_background" >

    <EditText
        android:id="@+id/et_keyoboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:inputType="text" />

    <Button
        android:id="@+id/bt_send"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_keyoboard"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:text="@string/_send" />

    <Button
        android:id="@+id/bt_enter"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt_space"
        android:layout_alignParentRight="true"
        android:text="@string/_enter" />

    <Button
        android:id="@+id/bt_backspace"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt_f5"
        android:layout_alignParentRight="true"
        android:text="@string/_backspace" />

    <Button
        android:id="@+id/bt_space"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_send"
        android:layout_centerHorizontal="true"
        android:text="@string/_space" />

    <Button
        android:id="@+id/arrow_up"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/bt_f5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="↑" />

    <Button
        android:id="@+id/arrow_down"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/arrow_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="↓" />

    <Button
        android:id="@+id/arrow_left"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/arrow_down"
        android:layout_alignParentLeft="true"
        android:text="←" />

    <Button
        android:id="@+id/arrow_right"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/arrow_down"
        android:layout_alignParentRight="true"
        android:text="→" />

    <Button
        android:id="@+id/bt_back"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/arrow_up"
        android:text="@string/_back" />

    <Button
        android:id="@+id/bt_forward"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/arrow_up"
        android:layout_alignParentRight="true"
        android:text="@string/_forward" />
    
    <Button 
        android:id="@+id/bt_f5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_space"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/_f5"/>

    <Button 
        android:id="@+id/bt_esc"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt_f5"
        android:text="@string/_esc"/>
    
    <Button 
        android:id="@+id/bt_ctrl_w"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt_space"
        android:text="@string/_closeTab"/>
</RelativeLayout>