<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background" >

    <TextView
        android:id="@+id/tv_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_ip1"
        android:layout_marginLeft="40dp"
        android:text="@string/server_ip"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_ip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ll1"
        android:layout_toRightOf="@+id/tv_ip"
        android:inputType="number"
        android:text="@string/_192" >
    </EditText>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_toRightOf="@+id/et_ip1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_" />

        <EditText
            android:id="@+id/et_ip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/_168" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_" />

        <EditText
            android:id="@+id/et_ip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_" />

        <EditText
            android:id="@+id/et_ip4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_port"
        android:layout_alignLeft="@+id/tv_ip"
        android:layout_below="@+id/et_ip1"
        android:text="@string/_port"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_ip1"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/tv_port"
        android:inputType="number"
        android:text="@string/et_port" />

    <Button
        android:id="@+id/bt_link"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_port"
        android:layout_below="@+id/et_port"
        android:layout_marginTop="20dp"
        android:onClick="start"
        android:text="@string/_link" >
    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bt_link"
        android:layout_marginTop="50dp"
        android:text="@string/_illustration"
        android:textColor="#77FF0000"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="20sp"
        android:textColor="#FF0000"
        android:text="By JxJ"/>

</RelativeLayout>